; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21663.c_resolve.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21663.c_resolve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }
%struct.hostent = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @resolve(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.in_addr, align 4
  %5 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @inet_addr(i8* %6)
  %8 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = icmp eq i32 %7, -1
  br i1 %9, label %10, label %22

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call %struct.hostent* @gethostbyname(i8* %11)
  store %struct.hostent* %12, %struct.hostent** %5, align 8
  %13 = icmp ne %struct.hostent* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %10
  store i64 -1, i64* %2, align 8
  br label %26

15:                                               ; preds = %10
  %16 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %17 = load %struct.hostent*, %struct.hostent** %5, align 8
  %18 = getelementptr inbounds %struct.hostent, %struct.hostent* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @memcpy(i32* %16, i32 %19, i32 4)
  br label %21

21:                                               ; preds = %15
  br label %22

22:                                               ; preds = %21, %1
  %23 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = sext i32 %24 to i64
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %22, %14
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local %struct.hostent* @gethostbyname(i8*) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
